fix overflow

--- a/staticfiles/scss/blocks/offer/_offer.scss
+++ b/staticfiles/scss/blocks/offer/_offer.scss
@@ -13,6 +13,9 @@
         z-index: -1;
         top: 50px;
     }
+    .divider {
+        margin-top: 9rem;
+    }
     &__text {
         width: 580px;
     }
